# shbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  _dummy.rs  docker-compose.yml  justfile  schema.sql  todo.md
cloud/: .terraform.lock.hcl  cloud_init.tf  cloud_init.yml  dns.tf  instances.tf  justfile  load_balancer.tf  main.tf  outputs.tf  security_groups.tf  subnets.tf  variables.tf
cloud/modules/database/: README.md  cloud_init.yml  db.tf  variables.tf
cloud/modules/server/: README.md  cloud_init.tf  cloud_init.yml  dns.tf  instances.tf  load_balancer.tf  outputs.tf  security_groups.tf  subnets.tf  variables.tf
crates/csv-parser/: Cargo.toml
crates/csv-parser/src/: convertors.rs  lib.rs  structs.rs
crates/models/: Cargo.toml
crates/models/src/: films.rs  lib.rs  shared.rs  students.rs
crates/shereebot/: Cargo.toml
crates/shereebot/src/: films.rs  lib.rs  main.rs  manager.rs  queue.rs  server.rs  slack.rs  store.rs  utils.rs
crates/shereebot/src/server/: handlers.rs  interceptors.rs
crates/shereebot/src/slack/: app_mentions.rs  events.rs  message.rs  slash.rs
crates/shereebot/src/store/: mock.rs  postgres.rs
crates/shereebot/src/utils/: config.rs  errors.rs  logger.rs
crates/shereebot/tests/: db_integration.rs  test.docker-compose.yml  test_schema.sql
scripts/: connect  deploy  deploy.sh  migrate  poll_status  poll_status.sh  setup
src/: config.rs  db.rs  films.rs  interceptors.rs  lib.rs  logger.rs  main.rs  models.rs  queue.rs  server.rs  slack.rs  store.rs  utils.rs
src/models/: slack.rs
src/server/: handlers.rs  interceptors.rs
src/slack/: app_mentions.rs  events.rs
src/store/: films.rs  mock.rs  postgres.rs
src/utils/: config.rs  errors.rs  logger.rs
tests/: db_integration.rs  test-schema.sql
