[package]
name = "shereebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
color-eyre = "0.5"
deadpool-postgres = { version = "0.10.0", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.5"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.2.5", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
