[package]
name = "shbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
axum = "0.4.8"
axum-macros = "0.1.2"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5"
console-subscriber = "0.1.3"
deadpool-postgres = { version = "0.10.0", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
time = { version = "0.3.9", features = ["formatting"] }
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.2.5", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "fmt", "time"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "0.6.0"
