[package]
name = "csv-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
csv = "1.1"
models = { path = "../models" }
reqwest = { version = "0.11.10", features = ["json","rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
